<resources>
    <string name="app_name">ParkNet</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="loginButton">Login</string>
    <string name="logoutButton">Logout</string>
    <string name="title_activity_main">What do you want to do?</string>
    <string name="offerParkingLabel">Offer My Parking Lot</string>
    <string name="rentParkingLabel">Rent a parking</string>
    <string name="priceHint">Price per hour:</string>
    <string name="addressHint">Address of parking</string>
    <string name="sendButton">Send</string>
    <string name="offerParkingActivityTitle">Offer your parking</string>
    <string name="startTimeLabel">Start Time:</string>
    <string name="chooseTime">Pick Time</string>
    <string name="pickTime">Choose</string>
    <string name="chooseDate">Pick Date</string>
    <string name="endTimeLabel">End Time:</string>
    <string name="book">Book Now!</string>
    <string name="orderParkingActivityTitle">order parking lot</string>
    <string name="orderButton">Order</string>
    <string name="totalPrice">Total Price</string>
    <string name="viewOrdersLabel">View My Orders</string>
    <string name="orderDetails">See Details</string>
    <string name="ViewOrdersActivityLabel">My Orders</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">Map</string>
    <string name="search_hint">Enter Address, City or Zip Code</string>
</resources>
