<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/logoutButton" />

    <Button
        android:id="@+id/offerParkingBtn"
        android:textAllCaps="false"
        android:layout_marginTop="50dp"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/offerParkingLabel" />

    <Button
        android:id="@+id/rentParkingBtn"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/rentParkingLabel" />

    <Button
        android:id="@+id/viewOrdersBtn"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/viewOrdersLabel" />


</LinearLayout>