<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OfferParkingActivity">

    <!--<EditText-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:layout_gravity="center"-->
        <!--android:inputType="text"-->
        <!--android:id="@+id/addressInput"-->
        <!--android:hint="@string/addressHint"-->
        <!--android:layout_width="300dp"-->
        <!--android:layout_height="wrap_content" />-->

    <EditText
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:id="@+id/priceInput"
        android:hint="@string/priceHint"
        android:layout_width="300dp"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/startTimeLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/chooseStartTime"
            android:layout_weight="1"
            android:hint="@string/chooseTime"
            android:layout_width="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/chooseStartDate"
            android:layout_weight="1"
            android:hint="@string/chooseDate"
            android:layout_width="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/endTimeLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/chooseEndTime"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:hint="@string/chooseTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/chooseEndDate"
            android:layout_weight="1"
            android:hint="@string/chooseDate"
            android:layout_width="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendButton" />

</LinearLayout>