<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".OrderActivity">


    <TextView
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:id="@+id/pricePerHour"
        android:textSize="20sp"
        android:text="8.25 $/Hr"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/startTimeLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/startTime"
            android:layout_weight="1"
            android:text="19/11/18 14:00"
            android:layout_width="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/endTimeLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/endTime"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="19/11/18 17:00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ListView
        android:layout_weight="1"
        android:layout_marginTop="30dp"
        tools:listitem="@layout/time_slot_item"
        android:id="@+id/time_slots"
        android:layout_width="match_parent"
        android:layout_height="0dp">
    </ListView>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/totalPrice"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/totalPrice"
            android:layout_marginRight="5dp"
            android:gravity="right"
            android:layout_weight="1"
            android:text="8.25 $"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:id="@+id/orderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orderButton" />

</LinearLayout>